@@ -35,7 +35,6 @@ First create new file called .env with the content mentioned [Environment Variab
     Attaching to example_telegram_bot
     example_telegram_bot | [20:30:06] [INFO] Main: Initializing ** Your bot name here** ...
     example_telegram_bot | [20:30:06] [INFO] Main: Authorized admin ids: [**Your ids here**]
-    example_telegram_bot | WARNING: An illegal reflective access operation has occurred ...
     example_telegram_bot | [20:30:07] [INFO] Main: Initialization done
     ```
  4. If you want to stop the bot
@@ -75,13 +74,12 @@ Alternatively you can run the example from source
     cd build/install/ExampleTelegramBot
 
     # Run the bot
-    java -jar ExampleTelegramBot.jar
+    java --add-opens java.base/java.lang=ALL-UNNAMED -jar ExampleTelegramBot.jar
     ```
  4. If bot is working correctly you should see the following logs
     ```shell script
     [20:30:06] [INFO] Main: Initializing ** Your bot name here** ...
     [20:30:06] [INFO] Main: Authorized admin ids: [**Your ids here**]
-    WARNING: An illegal reflective access operation has occurred ...
     [20:30:07] [INFO] Main: Initialization done
     ```
      
